Fix: resolved double scroll issue by adjusting overflow and container heights

--- a/src/App.scss
+++ b/src/App.scss
@@ -32,7 +32,6 @@ html {
 
 body {
   font-weight: 400;
-  overflow-x: hidden;
   position: relative;
   background-color: #121212 !important;
   color: #fff !important;
