--- a/src/components/Articles/index.scss
+++ b/src/components/Articles/index.scss
@@ -1,6 +1,6 @@
 .articles {
     position: relative;
-    padding: 5rem 0;
+    padding: 2.5rem 0; 
     background: #000;
     z-index: 0;
   
@@ -33,11 +33,12 @@
   
     .background-image-right {
       position: absolute;
-      top: 20%;
-      bottom: 0;
-      width: 35%;
+      top: 0; 
       right: 0;
-      z-index: -1;
+      width: 35%;
+      height: auto; 
+      max-height: 100%; 
+      z-index: -1; 
     }
   }
   
